added lorem for p in html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Calculator in Js</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim natus voluptatum deleniti labore numquam voluptates
+        libero, fugit sequi, porro corporis consectetur dolores atque magni nihil doloremque reprehenderit? Veniam, vero
+        delectus!</p>
 </body>
 
 <script src="script.js"></script>
